Implementação completa do 11° módulo do curso

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,5 +7,5 @@ NotNull=O campo '{0}' deve ser informado.
 PositiveOrZero=O campo '{0}' deve possuir um valor maior ou igual a zero
 
 # Specifics
-restaurant.deliveryFee=Taxa de frete do restaurante
+restaurantInput.deliveryFee=Taxa de frete do restaurante
 state.id=Código do estado
